# bamrescue

./: .travis.yml  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
completion/bash/: bamrescue
completion/zsh/: _bamrescue
docs/man/: bamrescue.1.ronn
src/: lib.rs  main.rs
tests/: check.rs  rescue.rs  version.rs
tests/common/: mod.rs
