[package]
name = "bamrescue"
version = "0.1.0"
description = "Utility to check Binary Sequence Alignment / Map (BAM) files for corruption and repair them"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/bamrescue"
homepage = "https://github.com/Arkanosis/bamrescue"
repository = "https://github.com/Arkanosis/bamrescue"

readme = "README.md"
license = "ISC"

keywords = ["bam", "integrity", "check", "repair", "bioinfo"]
categories = ["command-line-utilities"]

[dependencies]
byteorder = "1.0"
crc = "1.4"
docopt = "0.7"
futures = "0.1"
futures-cpupool = "0.1"
inflate = "0.2"
number_prefix = "0.2"
rustc-serialize = "0.3"
slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"
