[package]
name = "bamrescue"
version = "0.3.0-dev"
description = "Utility to check Binary Sequence Alignment / Map (BAM) files for corruption and repair them"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/bamrescue"
homepage = "https://github.com/Arkanosis/bamrescue"
repository = "https://github.com/Arkanosis/bamrescue"

readme = "README.md"
license = "ISC"

keywords = ["bam", "integrity", "check", "repair", "bioinfo"]
categories = ["command-line-utilities"]

[dependencies]
byteorder = "1.3"
crc = "1.8"
docopt = "1.1"
futures = "0.1"
futures-cpupool = "0.1"
indicatif = "0.11"
inflate = "0.4"
number_prefix = "0.3"
serde = "1.0"
serde_derive = "1.0"
